--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bhsg-api",
   "version": "1.0.0",
-  "description": "bhsg API with Node.js, Express and Mongo",
+  "description": "BHSG-API",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,6 +10,7 @@
   "keywords": [
     "nodejs",
     "express",
+    "mongodb",
     "restapi"
   ],
   "author": "",
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.1",
     "sequelize": "^6.12.0-beta.1"
   },
